# TMA4280-P2

./: CMakeLists.txt  CMakeListsv1.txt  P16_t2.csv  README.md  a.out  n.csv  poisson_parallel.cpp  test_build.cpp
TestRun/: CMakeCache.txt  Makefile  P_18.out  a10_speedup.slurm  a1_speedup.slurm  a2_speedup.slurm  a4_speedup.slurm  a6_speedup.slurm  a_q2_P2_t2.out  a_q2_P2_t8.out  aserial_speedup.slurm  b12_speedup.out  b1_speedup.out  b_q2_P2_t4.slurm  b_q2_P8_t2.slurm  b_q2_P8_t4.out  b_q2_P8_t4.slurm  b_q2_P8_t8.slurm  c_q2_P2_t8.slurm  cmake_install.cmake  f1_Pt_36.slurm  f2_Pt_36.slurm  f3_Pt_36.slurm  f4_Pt_36.slurm  g_P16_t1.out  g_P16_t2.out  g_P2_t1.out  g_P2_t2.out  g_P2_t4.out  g_P2_t8.out  h1_p2_t1.slurm  h1_p2_t2.slurm  h2_p16_t1.slurm  h2_p16_t4.slurm  plotting.py  poisson_parallel  q2_P16_t1.slurm  q2_P2_t1.out  q2_P2_t1.slurm  q2_P2_t2.slurm  (+3 more)
TestRun/bash scripts/: a12_speedup.slurm  a2_speedup.slurm  a8_speedup.slurm  f1_Pt_36.slurm  f4_Pt_36.slurm  f5_Pt_36.slurm  h1_p2_t4.slurm  h1_p2_t8.slurm  h2_p16_t2.slurm  h2_p16_t8.slurm
TestRun/results/: P_6.out  P_9.out  a_q2_P2_t4.out  b10_speedup.out  b4_speedup.out  b6_speedup.out  b8_speedup.out  b_q2_P8_t2.out  g_P16_t1.out  g_P16_t2.out  g_P2_t1.out  g_P2_t4.out  plotting.py  q2_P2_t1.out
TestRun/results/pt=36/: P_18.out  P_36.out
TestRun/results/speedup/: b1_speedup.out  b2_speedup.out
TestRun/test_36_old/: P_36.out  P_6.out  P_9.out
poisson/: CMakeLists.txt  poisson.c
poisson/builds/: CMakeCache.txt  Makefile  cmake_install.cmake  poisson
